servicemesh/app-c-dr-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-c
spec:
  host: service-c
  subsets:
  - name: version-v1
    labels:
      version: v1
  #TODO Circuit Breaker goes here
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-c
spec:
  hosts:
  - service-c
  http:
  - route:
    - destination:
        host: service-c
        subset: version-v1
      weight: 100
    #TODO Retry policy comes here
