servicemesh/auth.yml
apiVersion: "security.istio.io/v1beta1"
kind: "RequestAuthentication"
metadata:
  name: app-a-requestauthentication
spec:
  selector:
    matchLabels:
      app: app-a
  jwtRules:
  - issuer: "https://<KEYCLOAK URL>/realms/myrealm"
    jwksUri: "http://<KEYCLOAK SVC ADDRESS>:8080/realms/myrealm/protocol/openid-connect/certs"
    forwardOriginalToken: true

---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: app-a-authorizationpolicy
spec:
  selector:
    matchLabels:
      app: app-a
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals: ["*"]
